--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,19 +3,19 @@
   color: white;
   padding-bottom: 80px; }
   .jumbotron .btn-primary {
-    background: #845ac7;
-    border-color: #845ac7; }
+    background: rgb(92, 92, 11);
+    border-color: rgb(104, 104, 3); }
     .jumbotron .btn-primary:hover {
-      background: #7646c1; }
+      background: rgb(104, 104, 3); }
   .jumbotron p {
-    color: #d9ccee;
+    color: rgb(240, 240, 240);
     max-width: 75%;
     margin: 1em auto 2em; }
   .navbar + .jumbotron {
     margin-top: -20px; }
   .jumbotron .lang-logo {
     display: block;
-    background: #B01302;
+    background: rgb(92, 92, 11);
     border-radius: 50%;
     overflow: hidden;
     width: 100px;
